# assignment2-systems

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
cs336_systems/: __init__.py  attention_triton.py  benchmark.py  benchmark_attention.py  configs.py  nvtx_model.py  output_utils.py  weight_sum_triton.py
docs/: README.md
docs/sections/: attention-benchmark.md  attention-jit-comparison.md  benchmarking.md  e2e_jit_comparison.md  flash_attention_benchmark.md  memory-profile-(a).md  memory-profile-(b).md  memory-profile-(c).md  memory-profile-(d).md  memory-profile-(e).md  mixed-precision.md  mixed_precision_accumulation.md  mixed_precision_autocat_type.md  mixed_precision_layernorm.md  nsys-profile.md
docs/templates/: benchmarking_memory.md.j2  benchmarking_mixed_precision.md.j2  main.md.j2
output/: benchmark_results.md
result/: benchmark_results_nsys.md  benchmark_results_rtx5090.md
scripts/: analyze_basic_benchmarks.py  analyze_memory_allocations.py  analyze_memory_snapshot.py  analyze_mixed_precision.py  analyze_nsys_profile.py  benchmark_flash_attention.py  benchmark_jit_comparison.py  constants.py  estimate_vram.py  generate_docs.py  run_benchmarks.py  table_utils.py
tests/: adapters.py  test_attention.py
