[project]
name = "cs336-systems"
version = "1.0.5"
description = "CS336 Assignment 2 - Systems"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cs336-basics",
    "humanfriendly",
    "matplotlib",
    "numpy",
    "pytest>=8",
    "regex>=2024.11.6",
    "torch~=2.8.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch~=2.8.0; sys_platform == 'darwin' and platform_machine == 'x86_64'", # Intel Macs
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "pandas>=2",
    "ty>=0.0.1a16",
    "ruff>=0.14.1",
    "tabulate>=0.9.0",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cs336_systems"
module-root = ""

[tool.uv]
package = true
python-preference = "managed"

[tool.uv.sources]
cs336-basics = { path = "./cs336-basics", editable = true } # Change this path to your assignment1-basics repo you want to use your own implementation!


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 88
extend-exclude = ["tests"]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["F722", "D203", "D213", "S101", "COM812", "T201", "S603", "S607", "PLR0913"]

[tool.ty.src]
# Exclude cs336-basics/** because it's an editable dependency with its own pyproject.toml.
# To type-check cs336-basics, run: uv run ty check --project ./cs336-basics
# ty doesn't merge configurations from subdirectories (see https://github.com/astral-sh/ty/issues/819)
exclude = ["tests/*", "cs336-basics/**"]
